# ES-SACA

./: .gitignore  CMakeLists.txt  README.md  demo.cpp  todo.md
ESP/: CMakeLists.txt  Detecao_disparo_teste.ino  ESP_code.txt  main.cpp
ESP/Detecao_disparo_teste/: Detecao_disparo_teste.ino  esp_fsm.drawio
central_pc/: CMakeLists.txt  README.md
central_pc/database/: create_tables.sql  database.cpp  database.h  demo.cpp
central_pc/gui/: addplayerwindow.cpp  addplayerwindow.h  addplayerwindow.ui  exportwindow.cpp  exportwindow.h  exportwindow.ui  initwindow.cpp  initwindow.h  initwindow.ui  loginwindow.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow2.cpp  mainwindow2.h  mainwindow2.ui  pistolwindow.cpp  pistolwindow.h  pistolwindow.ui  pistolwindow.ui.autosave  riflewindow.cpp  riflewindow.h  riflewindow.ui
central_pc/src/: central_pc.cpp
example/: README.md
local_pc/: CMakeLists.txt  local_pc
local_pc/database/: create_tables.sql  database.h  demo.cpp
local_pc/gui/: loginwindow.cpp  loginwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  pistolwindow.cpp  pistolwindow.h  pistolwindow.ui  riflewindow.cpp  riflewindow.h  riflewindow.ui
local_pc/gui/resource/: OwlResources.qrc
local_pc/src/: local_pc.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pistolwindow.cpp  pistolwindow.h  pistolwindow.ui  pistolwindow.ui.autosave
local_pc/src/resource/: OwlResources.qrc
local_pc/vision_analysis/: CMakeLists.txt  main.cpp
local_pc/vision_analysis/shared/: TCPsocket.cpp  TCPsocket.hpp
local_pc/vision_analysis/src/: Approx.hpp  Detector.cpp  Detector.hpp  edge.cpp  image_alignment.cpp  image_alignment.hpp
local_pc/vison_analysis/: CMakeLists.txt  alignment.cpp  allignment.cpp  edge.cpp  img  main.cpp  vision_analysis.cpp  vision_analysis.h
local_pc/vison_analysis/example/: CMakeLists.txt
local_pc/vison_analysis/example/src/: main.cpp
local_pc/vison_analysis/src/: Approx.hpp  Detector.cpp  Detector.hpp  edge.cpp  image_alignment.cpp  image_alignment.hpp
local_pc/vison_analysis/src/demo/: Data.txt  data.py
scripts/: install.sh
shared/: TCPsocket.cpp  TCPsocket.hpp
src/: Approx.cpp
